--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ header ul li {
     list-style: none;
     display: inline-block;
     margin-right: 3em;
-    min-width: 30px;
+    min-width: 40px;
     height: 30px;
 
 }
@@ -156,10 +156,17 @@ header ul li:last-of-type {
 }
 
 header .hex2 {
-    font-size: 10px;
+    font-size: 12px;
     position: absolute;
-    margin: 10px;
 }
+header .hex2 div{
+    width: 44px;
+    height: 50px;
+    background-image: url('../img/hexBlue.png');
+    line-height: 2em;
+
+}
+
 
 div.wrapper {
     width: 960px;
@@ -368,42 +375,28 @@ li.kappa h3 {
 
 .hex2 {
 
-    width: 4em;
-    height: 4em;
-    position: relative;
+    width: 70px;
+    height: 70px;
     margin: 0 auto;
 }
 
-.hex2 > div:first-of-type {
-    font-size: 5em;
-    line-height: 0.3em;
-    position: absolute;
-    text-align: center;
 
-}
-
-.hex2 > div:last-of-type {
+.hex2 > div{
     font-size: 2em;
-    position: absolute;
+    line-height: 2em;
     text-align: center;
-    width: 2.25em;
+    width: 62px;
+    height: 70px;
     color: #FFF;
+    background-image: url('../img/hex.png');
+    background-repeat: no-repeat;
+    margin: 0 auto;
 }
-
-li.kraken .hex2 div:first-of-type {
-    color: #1482C0;
-}
-
-
-.hex2 div{
-    color: #ff985d;
-}
-
 
 .docs{
     background-color: #FFFFFF;
     color:#414141;
-    padding-top: 3em;
+    padding: 3em 0;
     position: relative;
 }
 
@@ -412,8 +405,14 @@ li.kraken .hex2 div:first-of-type {
     margin: 0 0 1em 0;
 }
 
+.docsContent section:first-of-type h2{
+    margin-top: 0;
+}
+
 .docsContent h2{
+    margin-top: 2em;
     font-weight: bold;
+    font-size: 1.8em;
     margin-bottom: .5em;
     padding-bottom: .5em;
     border-bottom: solid 1px #016084;
