--- a/css/main.css
+++ b/css/main.css
@@ -507,9 +507,6 @@ footer a, .docs a {
         margin-bottom: 2em;
     }
 
-    .docs {
-        padding: 1em;
-    }
     .docs h1 {
         margin: 0 0 .25em 0;
     }
@@ -525,7 +522,7 @@ footer a, .docs a {
 
     .docsContent ul, .docsContent > section > ol{
         margin: 0;
-        padding: 0;
+        padding: 0 .5em;
 
     }
 
