--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ body {
 }
 
 code {
-    padding: .25em;
+    padding: .125em .25em;
     border-radius: 5px;
     border: solid 1px #666666;
     background-color: #f0f0f0;
