Round 3 of feedback

--- a/css/main.css
+++ b/css/main.css
@@ -466,7 +466,7 @@ li.kappa div.moduleTitle  {
 footer {
     padding: 3em;
     background-color: #e6e7e8;
-    color: #6d6e70;
+    color: #555;
 }
 
 footer a, .docs a {
